base/central-config/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  template:
    spec:
      containers:
      - name: central-config
        image: central-configImage
      - name: api
        $patch: delete
      initContainers: null
      volumes: null
