base/central-config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
spec:
  rules:
  - host: $(CENTRAL_CONFIG_API_HOSTNAME)
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 80
